src/objects/Plan_Action__c.object
<CustomObject>
    <fields>
        <fullName>commentaire__c</fullName>
        <label>comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>date_commencement__c</fullName>
        <label>date of detection</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echeancier__c</fullName>
        <label>timeline</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>etat__c</fullName>
        <defaultValue>true</defaultValue>
        <label>state</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gestionnaire__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>administrator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>risque_Entite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>detected risk</label>
        <referenceTo>Risque_Entite__c</referenceTo>
        <relationshipLabel>Action Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Action Plan</label>
    <nameField>
        <label>PA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Deadline_less_than_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>date_commencement__c  &gt;  echeancier__c</errorConditionFormula>
        <errorMessage>The start date can not be upper than the deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Detected_Risk_Closed_on_PA</fullName>
        <active>true</active>
        <errorConditionFormula>risque_Entite__r.etat__c  = true</errorConditionFormula>
        <errorMessage>the detected risk must be in process in order to add action plans</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>different_structure_for_admin_planaction</fullName>
        <active>true</active>
        <errorConditionFormula>gestionnaire__r.Account.Id  &lt;&gt;  risque_Entite__r.Entite__r.Id</errorConditionFormula>
        <errorMessage>The action plan administrator and the action plan must be in the same structure</errorMessage>
    </validationRules>
</CustomObject>